# Summer-research-computerVision

./: pyproject.toml
Models/: Model_10_Mendeley.ipynb  Model_1_Mendeley.ipynb  Model_1_PlantVillage.ipynb  Model_2_Mendeley.ipynb  Model_2_PlantVillage.ipynb  Model_3_Mendeley.ipynb  Model_4_Mendeley.ipynb  Model_6_Mendeley.ipynb  Model_7_Mendeley.ipynb  Model_8_Mendeley.ipynb  Model_9_Mendeley.ipynb
Models/Experiments_Phase02/: MODEL_COMPARISON_TABLE.csv  MODEL_COMPARISON_TABLE.md  vgg16_mendeley_pytorch.ipynb  vgg16_mendeley_pytorch.py  vgg16_mendeley_pytorch_mha_intermediate_dimred_128_head8.ipynb  vgg16_mendeley_pytorch_mha_intermediate_dimred_128_head8.py
Models/Experiments_Phase02/densenet169_Mendeley/: densenet169_mendeley_1.ipynb  densenet169_mendeley_2.ipynb  densenet169_mendeley_3.ipynb  densenet169_mendeley_4.ipynb
Models/Experiments_Phase02/densenet201_Mendeley/: densenet201_mendeley_1.ipynb  densenet201_mendeley_2.ipynb  densenet201_mendeley_3.ipynb  densenet201_mendeley_4.ipynb
Models/Experiments_Phase02/inceptionv3_Mendeley/: inceptionv3_mendeley.ipynb  inceptionv3_mendeley_1.ipynb  inceptionv3_mendeley_2.ipynb  (+2 more)
Models/inceptionv3_Mendeley/: inceptionv3_mendeley_1.ipynb  inceptionv3_mendeley_2.ipynb  inceptionv3_mendeley_3.ipynb  inceptionv3_mendeley_4.ipynb
Models/mobilenetv2_Mendeley/: mobilenetv2_mendeley_1.ipynb  mobilenetv2_mendeley_2.ipynb  mobilenetv2_mendeley_3.ipynb  mobilenetv2_mendeley_4.ipynb
Models/vgg16_Mendeley/: vgg16_mendeley_1.ipynb  vgg16_mendeley_2.ipynb  vgg16_mendeley_3.ipynb  vgg16_mendeley_4.ipynb
(+124 files in other folders)
